overlays/dev/ingress/nginx-force-port-8080.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: ingress-nginx
spec:
  template:
    spec:
      containers:
        - name: nginx-ingress-controller
          ports:
            - name: http
              containerPort: 80
              hostPort: 8080
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
